some unnecessary imports have been deleted, templates have been corrected, ...: a lot of changes in general

--- a/WADWolframAngular/src/app/app.component.html
+++ b/WADWolframAngular/src/app/app.component.html
@@ -1,3 +1,7 @@
+﻿<html>
+<head>
+    <title>WADWolframAngular</title>
+</head>
 <body>
     <div id="wrapper">
         <!-- start header -->
@@ -34,7 +38,7 @@
             </nav>
         </header>
        	<section id="content">     
-          
+ 
           <div class="container">
             <div class="row">
                <router-outlet></router-outlet>
@@ -110,3 +114,4 @@
     </div>
     <a href="#" class="scrollup"><i class="fa fa-angle-up active"></i></a>
 </body>
+</html>
