--- a/WADWolframAngular/src/app/entities/contact.html
+++ b/WADWolframAngular/src/app/entities/contact.html
@@ -1,7 +1,4 @@
-<section class="container">
-
-
-            <div class="col-lg-4  col-xs-offset-0 ">
+﻿            <div class="col-lg-4  col-xs-offset-0 ">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h2 style="color:white;">Contáctanos <small style="color:white;">rellena los campos</small></h2>
@@ -50,4 +47,3 @@
             <div class="google-maps col-lg-4 hidden-xs">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3193.118916160952!2d-2.3801382851769963!3d36.83962797994058!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd7a9bfec8b10fe5%3A0x7bb2dfecaa157bdf!2sCalle+Picadilly%2C+7%2C+04120+Almer%C3%ADa!5e0!3m2!1ses!2ses!4v1486315692844" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
-        </section>
