--- a/WADWolframAngular/src/app/entities/about.html
+++ b/WADWolframAngular/src/app/entities/about.html
@@ -1,7 +1,4 @@
-  <section class="content">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
+﻿                    <div class="col-lg-12">
                         <div class="text-center">
                             <h3>Origen de la aplicación</h3>
                             <section>
@@ -27,6 +24,3 @@
 
                         </div>
                     </div>
-                </div>
-            </div>
-        </section>
