concret classes have been changed to interfaces and ngOnInit directive has been included into components

--- a/WADWolframAngular/src/app/entities/projectsList.html
+++ b/WADWolframAngular/src/app/entities/projectsList.html
@@ -22,7 +22,7 @@
                <li class="cbp-item graphic"  *ngFor="let project of projects">
                   <div class="cbp-caption">
                      <div class="cbp-caption-defaultWrap">
-                        <img src="https://localhost:8443/image/{{project.id}}.jpg" alt="foto del proyecto" />
+<!--                        <img src="https://localhost:8443/image/{{project.id}}.jpg" alt="foto del proyecto" />   -->
                      </div>
                      <div class="cbp-caption-activeWrap">
                         <div class="cbp-l-caption-alignCente                                       <div class="cbp-l-caption-body">
