--- a/WADWolframAngular/src/app/app.component.html
+++ b/WADWolframAngular/src/app/app.component.html
@@ -18,7 +18,7 @@
                         <div class="navbar-collapse collapse" [ngbCollapse]="menuCollapse">
                             <ul class="nav navbar-nav">
                               
-                                <li><a [routerLink]="['/index']">Inicio</a></li>
+                                <li><a [routerLink]="['/index']" >Inicio</a></li>
                                  <li><a [routerLink]="['/projects']" routerLinkActive="active">Proyectos</a></li>
                                 <li><a [routerLink]="['/blog']" routerLinkActive="active">Noticias</a></li>
                                 <li><a [routerLink]="['/contact']" routerLinkActive="active">Contacto</a></li>
@@ -112,6 +112,6 @@
             </div>
         </footer>
     </div>
-    <a href="#" class="scrollup"><i class="fa fa-angle-up active"></i></a>
+    <!--<a href="#" class="scrollup"><i class="fa fa-angle-up active"></i></a>-->
 </body>
 </html>
