--- a/WADWolframAngular/src/app/entities/about.html
+++ b/WADWolframAngular/src/app/entities/about.html
@@ -1,4 +1,5 @@
-﻿                    <div class="col-lg-12">
+﻿
+                    <div class="col-lg-12">
                         <div class="text-center">
                             <h3>Origen de la aplicación</h3>
                             <section>
