--- a/WADWolframAngular/src/app/entities/index.html
+++ b/WADWolframAngular/src/app/entities/index.html
@@ -9,7 +9,7 @@
                             <ul class="slides">
                                <!-- {{#projects}}-->
                                 <li>
-                                    <img src="/imagep/{{id}}.jpg" alt="Foto del proyecto" />
+                                    <img src="/files/{{id}}.jpg" alt="Foto del proyecto" />
                                     <div class="flex-caption">
                                         <h3>{{title}}</h3>
                                         <p>{{shortDescription}}</p>
@@ -35,7 +35,7 @@
                             <div class="col-sm-6 col-lg-6">
                                 <h4>Sobre nuestra asociación</h4>
                                 <p>
-                                    Bienvenido a la página web donde podrás hacer tu aportación económica a proyectos médicos dirigidos a personas que padecen el Síndrome de Wolfram. Además, podrás hacer un seguimiento general de todos los proyectos y, por supuesto, de aquellos en los que has aportado. Regístrate de manera gratuíta para poder contribuir con la asociación. Para más información haz <a href="/about">click aquí</a>.
+                                    Bienvenido a la página web donde podrás hacer tu aportación económica a proyectos médicos dirigidos a personas que padecen el Síndrome de Wolfram. Además, podrás hacer un seguimiento general de todos los proyectos y, por supuesto, de aquellos en los que has aportado. Regístrate de manera gratuíta para poder contribuir con la asociación. Para más información haz <a [routerLink]="['/about']" routerLinkActive="active">click aquí</a>.
                                 </p>
                                 <br/>
 
