breadcrums and styles

--- a/WADWolframAngular/src/app/entities/about.html
+++ b/WADWolframAngular/src/app/entities/about.html
@@ -1,4 +1,4 @@
-﻿
+﻿                    <div class= "fondo"> 
                     <div class="col-lg-12">
                         <div class="text-center">
                             <h3>Origen de la aplicación</h3>
@@ -24,4 +24,5 @@
 
 
                         </div>
+                    </div>
                     </div>
