--- a/WADWolframAngular/src/app/app.component.html
+++ b/WADWolframAngular/src/app/app.component.html
@@ -37,14 +37,14 @@
                 </div>
             </nav>
         </header>
-       	<section id="content">     
+       	<!-- <section id="content">-->    
  
-          <div class="container">
-            <div class="row">
+         <div class="container">
+            <!--<div class="row">-->
                <router-outlet></router-outlet>
-           </div>
+          <!-- </div>-->
           </div>
-        </section>
+        <!--</section>-->
         <footer>
             <div class="container">
                 <div class="row">
