--- a/WADWolframAngular/src/app/entities/blog.html
+++ b/WADWolframAngular/src/app/entities/blog.html
@@ -1,4 +1,15 @@
-       
+                     <section id="inner-headline">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <ul class="breadcrumb">
+                            <li><a [routerLink]="['/index']"><i class="fa fa-home"></i> Volver al Inicio</a><i class="icon-angle-right"></i></li>
+                            <li class="active">Noticias</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="content">
             <div class="container">
                 <div class="row">
