--- a/WADWolframAngular/src/app/entities/project.html
+++ b/WADWolframAngular/src/app/entities/project.html
@@ -1,11 +1,10 @@
-﻿<!--
-<header>
+﻿
 <section id="inner-headline">
    <div class="container">
       <div class="row">
          <div class="col-lg-12">
             <ul class="breadcrumb">
-               <li><a href="/"><i class="fa fa-home"></i> Volver al Inicio</a><i class="icon-angle-right"></i></li>
+               <li><a [routerLink]="['/index']"><i class="fa fa-home"></i> Volver al Inicio</a><i class="icon-angle-right"></i></li>
                <li><a href="/projects">Proyectos</a></li>
                <li class="active">Proyecto</li>
             </ul>
@@ -13,7 +12,6 @@
       </div>
    </div>
 </section>
-</header> -->
 
 <div class="col-lg-12">
    <div class="text-center">
