--- a/WADWolframAngular/src/app/entities/projectsList.html
+++ b/WADWolframAngular/src/app/entities/projectsList.html
@@ -1,4 +1,16 @@
-﻿      <div class="col-lg-12">
+﻿              <section id="inner-headline">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <ul class="breadcrumb">
+                            <li><a [routerLink]="['/index']"><i class="fa fa-home"></i> Volver al Inicio</a><i class="icon-angle-right"></i></li>
+                            <li class="active">Proyectos</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+      <div class="col-lg-12">
          <h4 class="heading">Nuestros proyectos</h4>
          <div id="filters-container" class="cbp-l-filters-button">
             <div data-filter="*" class="cbp-filter-item-active cbp-filter-item">Todos
