--- a/WADWolframAngular/src/app/entities/about.html
+++ b/WADWolframAngular/src/app/entities/about.html
@@ -1,6 +1,7 @@
-﻿                    <div class= "fondo"> 
+﻿            
                     <div class="col-lg-12">
                         <div class="text-center">
+                            <div class= "fondo">
                             <h3>Origen de la aplicación</h3>
                             <section>
                                 <font color="white"><h4>¿Por qué se creó esta aplicación?</h4>
@@ -25,4 +26,4 @@
 
                         </div>
                     </div>
-                    </div>
+                   </div>
