--- a/WADWolframAngular/src/app/bodybg/bg1.css
+++ b/WADWolframAngular/src/app/bodybg/bg1.css
@@ -1,1 +1,1 @@
-.fondo { background: url(../../assets/img/bodybg/bg1.png) repeat left top; }
+body { background: url(../../assets/img/bodybg/bg1.png) repeat left top; }
