--- a/WADWolframAngular/src/app/entities/projectsList.html
+++ b/WADWolframAngular/src/app/entities/projectsList.html
@@ -1,4 +1,4 @@
-﻿              <section id="inner-headline">
+﻿         <section id="inner-headline">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
@@ -37,8 +37,10 @@
 <!--                        <img src="https://localhost:8443/image/{{project.id}}.jpg" alt="foto del proyecto" />   -->
                      </div>
                      <div class="cbp-caption-activeWrap">
-                        <div class="cbp-l-caption-alignCente                                       <div class="cbp-l-caption-body">
-                           <a [routerLink]="['/project', project.id]" class="cbp-l-caption-buttonRight" data-title="Proyecto<br>Fecha lanzamiento">Leer más</a>
+                        <div class="cbp-l-caption-alignCenter">
+                           <div class="cbp-l-caption-body">
+                              <a [routerLink]="['/project', project.id]" class="cbp-l-caption-buttonRight" data-title="Proyecto<br>Fecha lanzamiento">Leer más</a>
+                           </div>
                         </div>
                      </div>
                   </div>
@@ -47,6 +49,7 @@
               </li>
             </ul>
          </div>
+aq:
          <div class="cbp-l-loadMore-button">
          <!--  <a href="ajax/loadMore.html" class="cbp-l-loadMore-button-link">Cargar más</a> -->
             <a href="#" class="cbp-l-loadMore-button-link">Cargar más</a>
