Re-Up user changes that was miss

--- a/WADWolframAngular/src/app/entities/userProjects.component.html
+++ b/WADWolframAngular/src/app/entities/userProjects.component.html
@@ -1,4 +1,4 @@
-  <section id="content">
+   <section id="content">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
@@ -18,9 +18,9 @@
                                 <div class="collapse navbar-collapse navbar-ex1-collapse">
 
                                     <ul class="nav navbar-nav col-lg-10">
-                                        <li class="active" id="iteMyProyects"><a href="#"  id="myProyects">Mis proyectos</a></li>
-                                        <li id="iteMyMovements"><a href="#"  id="myMovements">Mis movimientos</a></li>
-                                        <li id="iteMyDatas"><a href="#"  id="myDatas">Mis datos</a></li>
+                                       <li  id="iteMyProyects"class="active"><a href="/userProjects"  id="myProyects">Mis proyectos</a></li>
+                                        <li id="iteMyMovements" ><a href="/userMovements"  id="myMovements">Mis movimientos</a></li>
+                                        <li id="iteMyDatas"><a href="/userData"  id="myDatas">Mis datos</a></li>
                                     </ul>
                                     <form action="/user/close" method="post">
                                         <input type="submit" class="btn btn-info col-lg-2" id="btn_sesion" value="Cerrar sesión" />
@@ -39,10 +39,10 @@
                                     <div class="col-md-6">
                                         <ul class="list-group">
                                             <h2>Proyectos Colaborados</h2> <!--{{#colaborateProjects}}-->
-                                            <li class="list-group-item">
-                                                <H3><a href="/project?id={{projectId}}"><!--{{title}}--></a></H3>
-                                                <p><!--{{shortDescription}}--></p>
-                                                <p><!--{{money}}--></p>
+                                            <li class="list-group-item" *ngFor="let project of userProjects">
+                                                <H3><a href="/project?id={{projectId}}">{{project.projectTitle}}</a></H3>
+                                                <p>{{project.shortDescription}}</p>
+                                                <p>{{project.money}}</p>
                                             </li>
                                             <!--{{/colaborateProjects}}-->
                                         </ul>
@@ -50,9 +50,9 @@
                                     <div class="col-md-6">
                                         <ul class="list-group">
                                             <h2>Otros Proyectos Activos</h2> <!--{{#otherProjects}}-->
-                                            <li class="list-group-item">
-                                                <H3><a href=""><!--{{title}}--></a></H3>
-                                                <p><!--{{shortDescription}}--></p>
+                                            <li class="list-group-item" *ngFor="let project of otherProjects">
+                                                <H3><a href="">{{project.projectTitle}}</a></H3>
+                                                <p>{{project.shortDescription}}</p>
                                             </li>
                                             <!--{{/otherProjects}}-->
                                         </ul>
