--- a/WADWolframAngular/src/app/entities/userMovements.component.html
+++ b/WADWolframAngular/src/app/entities/userMovements.component.html
@@ -32,10 +32,8 @@
                             </nav>
 
                             <div class="inside">
-                                <!--{{#matchpass}}-->
-                                <h5 style="color: red"><strong> ¡Atención! Ningún cambio ha sido guardado porque la contraseña era incorrecta </strong></h5>
-                                <!-- {{/matchpass}}-->
-                                <h1>¡Bienvenid@ <!--{{username}}-->!</h1>
+                               
+                                <h1>¡Bienvenid@ {{username}}!</h1>
                                 
                                 <div class="row" id="donateProyects">
                                     <div class="col-md-12">
