little changes in user

--- a/WADWolframAngular/src/app/entities/userDataPage.component.html
+++ b/WADWolframAngular/src/app/entities/userDataPage.component.html
@@ -44,7 +44,7 @@
                                         <div class="col-md-6">
                                             <div id="profilePhoto">
 
-                                                <img src="/imageu/{{id}}.jpg" id="profileIcon" class="img-responsive" />
+                                                <img src="/imagen/{{id}}.jpg" id="profileIcon" class="img-responsive" />
                                                 <div class="form-group">
                                                     <label for="exampleInputFile">Cambiar foto</label>
                                                     <input type="file" id="exampleInputFile" class="center-block" name="imagen">
