--- a/WADWolframAngular/src/app/app.component.css
+++ b/WADWolframAngular/src/app/app.component.css
@@ -9,14 +9,14 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,300,300italic,400italic,500,500italic,700,700italic,900|Open+Sans:300,400,600,700');
 
 /* === prettify === */
-@import url('/js/google-code-prettify/prettify.css');
+@import url('../assets/js/google-code-prettify/prettify.css');
 /* === fontawesome === */
-@import url('/css/font-awesome.css');
+@import url('../assets/css/font-awesome.css');
 /* === custom icon === */
-@import url('/css/custom-fonts.css');
+@import url('../assets/css/custom-fonts.css');
 /* ==== overwrite bootstrap standard ==== */
-@import url('/css/theme.css');
-@import url('/css/animate.css');
+@import url('../assets/css/theme.css');
+@import url('../assets/css/animate.css');
 
 /* ===================================
 1. General
@@ -6767,8 +6767,8 @@ font-weight:300; color: #fff }
  * -------------------------- */
 @font-face {
   font-family: 'FontAwesome';
-  src: url('/fonts/fontawesome-webfont.eot?v=4.1.0');
-  src: url('/fonts/fontawesome-webfont.eot?#iefix&v=4.1.0') format('embedded-opentype'), url('/fonts/fontawesome-webfont.woff?v=4.1.0') format('woff'), url('/fonts/fontawesome-webfont.ttf?v=4.1.0') format('truetype'), url('/fonts/fontawesome-webfont.svg?v=4.1.0#fontawesomeregular') format('svg');
+  src: url('../assets/fonts/fontawesome-webfont.eot?v=4.1.0');
+  src: url('../assets/fonts/fontawesome-webfont.eot?#iefix&v=4.1.0') format('embedded-opentype'), url('../assets/fonts/fontawesome-webfont.woff?v=4.1.0') format('woff'), url('/fonts/fontawesome-webfont.ttf?v=4.1.0') format('truetype'), url('/fonts/fontawesome-webfont.svg?v=4.1.0#fontawesomeregular') format('svg');
   font-weight: normal;
   font-style: normal;
 }
