more admin ch-ch-changes

--- a/WADWolframAngular/src/app/component/admin/addblog/addblog.component.html
+++ b/WADWolframAngular/src/app/component/admin/addblog/addblog.component.html
@@ -118,9 +118,9 @@
 							</thead>
 							<tbody data-brackets-id='193'>
 								<tr data-brackets-id='194' class="odd gradeX">
-							<!--		<td data-brackets-id='195'>{{title}}</td>
-									<td data-brackets-id='196'>{{date}}</td>
-									<td data-brackets-id='197'>{{categoria}}</td>
+									<td data-brackets-id='195'>title</td>
+									<td data-brackets-id='196'>date</td>
+									<td data-brackets-id='197'>categoria</td>
 									<td data-brackets-id='198'><form method="post"
 											action="/borrarNoticia?id={{id}}">
 											<button class="btn btn-danger">
@@ -128,7 +128,6 @@
 											</button>
 											<input type="hidden" name="_csrf" value="{{token}}" />
 										</form></td>
--->
 								</tr>
 
 							</tbody>
