--- a/WADWolframAngular/src/app/component/admin/addproject/addproject.component.html
+++ b/WADWolframAngular/src/app/component/admin/addproject/addproject.component.html
@@ -143,13 +143,13 @@
 										</tr>
 									</thead>
 									<tbody data-brackets-id='193'>
-						<!--				
+										
 										<tr data-brackets-id='194' class="odd gradeX">
-											<td data-brackets-id='195'>{{title}}</td>
-											<td data-brackets-id='196'>{{parcialBudget}}</td>
-											<td data-brackets-id='197'>{{restBudget}}</td>
-											<td data-brackets-id='197'>{{time}}</td>
-											<td data-brackets-id='197'>{{startYear}}</td>
+											<td data-brackets-id='195'>title</td>
+											<td data-brackets-id='196'>parcialBudget</td>
+											<td data-brackets-id='197'>restBudget</td>
+											<td data-brackets-id='197'>time</td>
+											<td data-brackets-id='197'>startYear</td>
 											<td data-brackets-id='198'>
 												<form method="post" action="/borrarProyecto?id={{id}}">
 													<button class="btn btn-danger">
@@ -160,7 +160,6 @@
 											</td>
 
 										</tr>
--->
 									</tbody>
 								</table>
 							</div>
