--- a/WADWolframAngular/src/app/component/admin/donationsAdmin/donationsAdmin.component.html
+++ b/WADWolframAngular/src/app/component/admin/donationsAdmin/donationsAdmin.component.html
@@ -13,15 +13,15 @@
 								</tr>
 							</thead>
 							<tbody data-brackets-id='193'>
-							<!--	{{#donaciones}}
+							<!--	{{#donaciones}}-->
 								<tr data-brackets-id='194' class="odd gradeX">
-									<td data-brackets-id='195'>{{project.title}}</td>
-									<td data-brackets-id='196'>{{user.userName}}</td>
-									<td data-brackets-id='197'>{{money}}</td>
-									<td data-brackets-id='198'>{{date}}</td>
+									<td data-brackets-id='195'>project.title</td>
+									<td data-brackets-id='196'>user.userName</td>
+									<td data-brackets-id='197'>money</td>
+									<td data-brackets-id='198'>date</td>
 
 								</tr>
-								{{/donaciones}}-->
+								<!--{{/donaciones}}-->
 							</tbody>
 						</table>
 					</div>
