--- a/WADWolframAngular/src/app/component/admin/profile/profile.component.html
+++ b/WADWolframAngular/src/app/component/admin/profile/profile.component.html
@@ -4,7 +4,7 @@
 						<form class="form-horizontal" id="form-horizontal2" role="form"
 							action="/admin/Profile/update" method="post">
 
-<!--							<div class="form-group">
+							<div class="form-group">
 								<label for="inputEmail3" class="col-sm-2 control-label">Nombre</label>
 								<div class="col-sm-10">
 									<p class="form-control" id="inputEmail3">{{name}}</p>
@@ -15,7 +15,7 @@
 									electrónico</label>
 								<div class="col-sm-10">
 									<input type="email" class="form-control" id="inputEmail3"
-										placeholder="{{email}}" name="memail">
+										placeholder="email" name="memail">
 								</div>
 							</div>
 							<div class="form-group">
@@ -43,25 +43,26 @@
 								</div>
 							</div>
 
-							{{#malpass1}} <br>
+							<!--{{#malpass1}}--> <br>
 							<h5 style="color: red">
 								<strong> ¡La contraseña es inválida! </strong>
 							</h5>
 							<br>
+							<!--
 							 {{/malpass1}}
-							 {{#malpass2}}
+							 {{#malpass2}}-->
 							 <br>
 							<h5 style="color: red">
 								<strong> ¡La contraseña antigua es inválida! </strong>
 							</h5>
 							<br> 
-							{{/malpass2}} {{#malpass3}}
+							<!--{{/malpass2}} {{#malpass3}}-->
 							<br>
 							<h5 style="color: red">
 								<strong> ¡Las contraseñas nuevas no coinciden! </strong>
 							</h5>
 							<br> 
-							{{/malpass3}}
+							<!--{{/malpass3}}-->
 
 							<div class="form-group">
 								<div class="col-sm-offset-2 col-sm-10">
@@ -78,7 +79,7 @@
 										datos</button>
 								</div>
 							</div>
-							{{/User}} <input type="hidden" name="_csrf" value="{{token}}" />
+							<!--{{/User}}--> <input type="hidden" name="_csrf" value="{{token}}" />
 						</form>
 					</div>
 					<div class="col-md-6">
@@ -117,20 +118,21 @@
 								</div>
 							</div>
 
-{{#UsuarioCreado}}
+<!--{{#UsuarioCreado}}-->
 							<br>
 							<h5 style="color: green">
 								<strong> ¡Usuario creado correctamente! </strong>
 							</h5>
 							<br> 
-							{{/UsuarioCreado}}
-							{{#contraseñaIncorrecta}}
+							<!--{{/UsuarioCreado}}
+							{{#contraseñaIncorrecta}}-->
 							<br>
 							<h5 style="color: red">
 								<strong>  ¡Las contraseñas deben coincidir! </strong>
 							</h5>
 							<br> 
-							{{/contraseñaIncorrecta}}
+
+							<!--{{/contraseñaIncorrecta}}-->
 
 							<div class="form-group">
 								<div class="col-sm-offset-2 col-sm-10">
@@ -147,7 +149,7 @@
 										administrador</button>
 								</div>
 							</div>
-							<input type="hidden" name="_csrf" value="{{token}}" /> -->
+							<input type="hidden" name="_csrf" value="{{token}}" />
 						</form>
 					</div>
 				</div>
