--- a/WADWolframAngular/src/app/entities/login.html
+++ b/WADWolframAngular/src/app/entities/login.html
@@ -16,38 +16,37 @@
 
                 <div class="row">
                     <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
-                        <form role="form" class="register-form" action="/login" method="post">
+                        <form role="form" class="register-form" *ngIf="!loginService.isLogged">
                             <h2>¡Entra! <small>Participa de forma activa</small></h2>
                             <hr class="colorgraph">
 
                             <div class="form-group">
-                                <input type="email" name="email" id="email" class="form-control input-lg" placeholder="Dirección de correo electrónico" tabindex="4" required>
+                                <input #user type="email" name="email" id="email" class="form-control input-lg" placeholder="Dirección de correo electrónico" tabindex="4" required>
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputPassword1"></label>
-                                <input type="password" name="password" class="form-control input-lg" id="exampleInputPassword1" placeholder="Contraseña" tabindex="4" required>
+                                <input #pass type="password" name="password" class="form-control input-lg" id="exampleInputPassword1" placeholder="Contraseña" tabindex="4" required>
                             </div>
 
                             <div class="row">
                                 <div class="col-xs-4 col-sm-3 col-md-3">
                                     <span class="button-checkbox">
                                             <button type="button" class="btn" data-color="info" tabindex="7"><p href="#" data-toggle="modal" data-target="#t_and_c_m">Se me ha olvidado la contraseña</p></button>
-                                            <input type="checkbox" name="t_and_c" id="t_and_c" class="hidden" value="1">
                                         </span>
                                 </div>
                             </div>
 
                            <!-- {{#malogin}}-->
-                            <h5 style="color: red"><strong> Correo o contraseña erróneos </strong></h5> <!--{{/malogin}}-->
+                            <h5 style="color: red" *ngIf="error"><strong> Correo o contraseña erróneos </strong></h5> <!--{{/malogin}}-->
 
                             <hr class="colorgraph">
                             <div class="row">
                                 <div class="col-xs-12 col-md-6">
-                                    <button type="submit" class="btn btn-primary" data-dismiss="modal" onclick="cifrar()">Entrar</button>
+                                    <button (click)="logIn($event,user.value, pass.value)"  type="submit" class="btn btn-primary" data-dismiss="modal">Entrar</button>
                                 </div>
-                                <div class="col-xs-12 col-md-6">¿Todavía no tienes una cuenta? <a href="/register">Únete ya</a></div>
+                                <div class="col-xs-12 col-md-6">¿Todavía no tienes una cuenta? <a [routerLink]="['/register']">Únete ya</a></div>
                             </div>
-						<input type="hidden" name="_csrf" value="{{token}}"/>
+					<!--	<input type="hidden" name="_csrf" value="{{token}}"/>-->
                         </form>
                         <!-- Modal -->
                         <div class="modal fade" id="t_and_c_m" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -64,7 +63,7 @@
                                     </div>
                                     <div class="modal-footer">
                                         <form action="qai.karen@gmail.com" method="post">
-                                            <button type="button" class="btn btn-primary"><a href="/error">Entendido</a></button>
+                                            <button  type="button" class="btn btn-primary"><a href="/error">Entendido</a></button>
                                         <input type="hidden" name="_csrf" value="{{token}}"/>
                                         </form>
                                     </div>
